...
                            modifier = Modifier.padding(start = 4.dp)
                        )
                        Spacer(modifier = Modifier.height(6.dp))
                        OutlinedTextField(
                            modifier = Modifier
                                .fillMaxWidth()
                                .testTag("sign_in_email_field"),
                            value = email,
                            onValueChange = { value -> onAction(SignInAction.EmailChanged(value)) },
                            placeholder = {
                                Text(
                                    text = stringResource(R.string.user_id),
                                    color = MaterialTheme.colorScheme.onSurfaceVariant,
...
                        }
                        Spacer(modifier = Modifier.height(6.dp))
                        var isPasswordVisible by remember { mutableStateOf(false) }
                        OutlinedTextField(
                            modifier = Modifier
                                .fillMaxWidth()
                                .testTag("sign_in_password_field"),
                            value = password,
                            onValueChange = { value -> onAction(SignInAction.PasswordChanged(value)) },
                            placeholder = {
                                Text(
                                    text = stringResource(R.string.profile_placeholder_password),
                                    color = MaterialTheme.colorScheme.onSurfaceVariant,
...
                    Spacer(modifier = Modifier.height(24.dp))
                    // Sign In Button
                    LoadingButton(
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(56.dp)
                            .testTag("sign_in_submit_button")
                            .shadow(
                                elevation = 8.dp,
                                shape = RoundedCornerShape(8.dp),
                                spotColor = MaterialTheme.colorScheme.primary
                            ),
                        text = stringResource(R.string.btn_sign_in),
...
                        text = stringResource(R.string.sign_up),
                        style = MaterialTheme.typography.bodyMedium.copy(
                            color = MaterialTheme.colorScheme.primary,
                            fontWeight = FontWeight.Bold
                        ),
                        modifier = Modifier
                            .testTag("sign_in_sign_up_link")
                            .clickable { onAction(SignInAction.SignUpClicked) }
                    )
                }
            }
            // Footer Copyright (Outside the card)
            Row(
...
