...
    <string name="welcome">Welcome</string>
    <string name="your_mind_diary">Your mind diary</string>

    <!-- SignIn -->
    <string name="id">Email</string>
    <string name="user_id">email@example.com</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="id_is_empty">Id is empty</string>
    <string name="welcome_back">Welcome to Minary</string>
    <string name="sign_in_subtitle">Enter your details to access your\naccount.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">OR CONTINUE WITH</string>
...
